# TestAgent

./: .gitignore  README.md  STRUCTURE.md  main.py  pyproject.toml
agent/: main_agent.py
core/: memory.py  prompts.py
scripts/: llmServer.sh  server_launch.py
src/: format_logs.py  llmServer.sh  main.py  memory.py  tools_server.py
tools/: tools_server.py
utils/: ANSI.py  format_logs.py  model_detection.py
