[project]
name = "testagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.25.0",
    "numpy>=2.4.1",
    "openai>=2.14.0",
    "psutil>=7.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "yt-dlp>=2025.12.8",
]
