[project]
name = "testagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "llama-cpp-python>=0.3.16",
    "mcp>=1.25.0",
    "mlx-lm>=0.29.1",
    "numpy>=2.4.1",
    "ollama>=0.6.1",
    "openai>=2.14.0",
    "psutil>=7.2.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.40.0",
    "yt-dlp>=2025.12.8",
]
